--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "framer-motion": "^8.0.2",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "sass": "^1.57.1",
     "typescript": "^4.8.3"
   }
 }
